# BiqBird

./: .gitignore
Sample/1D/: H2_consistency_check.cpp  H_GS.cpp  He.hpp  README.md  continuum_limit_scan.cpp
Sample/1D/FD/: Be_GS.cpp  Be_fd_HF.cpp  H2_fd_HF.cpp  H_GS.cpp  He_GS.cpp  He_fd_HF.cpp  He_fd_HF_diagnostic.cpp  He_fd_HF_dx_scan.cpp  He_fd_HF_imag_robust.cpp  README.md  fd_basis.hpp  hartree_fd.hpp
Sample/1D/FD/legacy/: He.hpp  README.md
Sample/1D/FEDVR/: Be_fedvr_HF.cpp  H2_fedvr_HF.cpp  H_fedvr.hpp  H_fedvr_GS.cpp  He_fedvr.hpp  He_fedvr_GS.cpp  He_fedvr_HF.cpp  README.md  fedvr_basis.hpp  hf_fedvr.hpp
Sample/1D/Quantum/: .gitignore  README.md  export_integrals.cpp  pyproject.toml
Sample/1D/Quantum/biqbird_quantum/: __init__.py  build_qubit_h.py  direct_diag.py  iqpe.py  load_integrals.py  qiskit_bridge.py  trotter.py
Sample/1D/Quantum/scripts/: q1_step1_h_6qubit.py  q1_step3_h_18qubit.py  q2_he.py  q3_h2_scan.py  q4_trotter_gs.py  q5_qiskit_reference.py
