[project]
name = "biqbird-quantum"
version = "0.1.0"
description = "Quantum-computing layer of BiqBird: FEDVR DVR basis on a qubit register via Jordan-Wigner, with iQPE / Trotter on Qiskit Aer."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BiqBird" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "openfermion>=1.6",
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "psutil>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biqbird_quantum"]
